# Multi-Modal-Image-Retrieval

./: .gitignore  .pre-commit-config.yaml  README.md
multi-modal-retrieval-backend/: .env  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  main.py  (+3 more)
multi-modal-retrieval-pipeline/: Dockerfile  README.md  deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt  run_pipeline.sh
multi-modal-retrieval-pipeline/conf/base/: catalog.yml  parameters.yml
multi-modal-retrieval-pipeline/conf/production/base/: catalog.yml
multi-modal-retrieval-pipeline/data/04_feature/: embeddings.pq.dvc
multi-modal-retrieval-pipeline/data/06_models/: faiss_index.idx.dvc
multi-modal-retrieval-pipeline/docs/source/: index.rst
multi-modal-retrieval-pipeline/src/multi_modal_retrieval_pipeline/: __init__.py  __main__.py  cli.py  hooks.py  pipeline_registry.py  settings.py
multi-modal-retrieval-pipeline/src/multi_modal_retrieval_pipeline/io/: faiss_dataset.py
multi-modal-retrieval-pipeline/src/multi_modal_retrieval_pipeline/pipelines/data_processing/: nodes.py  pipeline.py
multi-modal-retrieval-pipeline/src/multi_modal_retrieval_pipeline/pipelines/data_science/: nodes.py  pipeline.py
multi-modal-retrieval-pipeline/src/multi_modal_retrieval_pipeline/runner/: cli.py  dask_runner.py
multi-modal-retrieval-pipeline/src/multi_modal_retrival_pipeline/: __main__.py  cli.py  hooks.py  settings.py
multi-modal-retrieval-pipeline/src/multi_modal_retrival_pipeline/io/: faiss_dataset.py
multi-modal-retrieval-pipeline/src/multi_modal_retrival_pipeline/pipelines/data_processing/: nodes.py  pipeline.py
multi-modal-retrieval-pipeline/src/multi_modal_retrival_pipeline/pipelines/data_science/: nodes.py
multi-modal-retrieval-pipeline/src/multi_modal_retrival_pipeline/runner/: dask_runner.py
multi-modal-retrieval-pipeline/tests/: test_run.py
multi-modal-retrieval-pipeline/tests/pipelines/data_processing/: test_pipeline.py
multi-modal-retrieval-pipeline/tests/pipelines/data_science/: test_pipeline.py
(+64 files in other folders)
